
        o 'plot_particles'  : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                 (up to hydroPSO <=0.1.58 it was always plotted)
                              -) arguments 'MinMax' and 'beh.thr' are now passed to 'plot_NparOF'

        o 'plot_results'    : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                 (up to hydroPSO <=0.1.58 it was always plotted)

        o 'plot_out'        : -) argument 'MinMax' is not required any more!
                              -) argument 'sim' may also be 'integer' (before it had to be 'numeric', which does not allow 'integer' objects !)  

        o 'plot_NparOF'     : -) new argument 'beh.thr' to allow selecting only behavioral parameter sets

        o 'params2ecdf'     : -) new arguments 'gofs', 'MinMax' and 'beh.thr' 
                            
        o new function 'pest2hydroPSO' for importing PEST input files into hydroPSO
        o new function 'hydroPSO2pest' for exporting hydroPSO input files to PEST
        
        
0.1-58	14-Sep-2012
        o 'hydroPSO'      : -) 'random.update' is now ONLY used when 'best.update="async". In hydroPSO 0.1-57 'random.update' was set to TRUE 
                               by default, independent of the 'best.update="sync" value.
                            -) argument values are now effectively checked for: 'MinMax', 'Xini.type', 'Vini.type', 'best.update', 'boundary.wall', 
                               'topology', 'IW.type', 'TVc1.type', 'TVc2.type', 'TVlambda.type'.
                            -) more and better examples
        o 'test_functions': -) name of the "rastrigrin" function was changed to its correct name of "rastrigin", and modified in all the examples.